Fix some problems on mobile view (update css)

--- a/core/rpc/html/css/style.css
+++ b/core/rpc/html/css/style.css
@@ -284,6 +284,18 @@ Fix Gumby
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
+/*mobile screen fix*/
+@media only screen and (max-width: 767px) {
+    /*fix dashboard widget icons that are not centered on button*/
+    .btn.large, .skiplink.large {
+        line-height: 38px; !important;
+    }
+    /*fix space between dashboard widgets*/
+    .row .row .column, .row .row .columns {
+        padding-bottom: 10px;
+    }
+}
+
 /*fix vertical tabs issue*/
 .tabs.vertical .tab-nav > li {
     height: 39px;
